# strongswan

./: configure.ac
src/libcharon/: Android.mk  Makefile.am
src/libcharon/plugins/eap_simaka_leemobi/: Makefile.am  eap_simaka_leemobi_card.c  eap_simaka_leemobi_card.h  eap_simaka_leemobi_plugin.c  eap_simaka_leemobi_plugin.h
src/libcharon/plugins/vici/: vici_config.c  vici_query.c
src/libcharon/sa/ikev2/tasks/: ike_auth.c
src/libstrongswan/credentials/: auth_cfg.c  auth_cfg.h
src/swanctl/: swanctl.opt
src/swanctl/commands/: list_conns.c
